--- a/client/app/chatroom/chatroom.html
+++ b/client/app/chatroom/chatroom.html
@@ -1,69 +1,46 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
-<header class="hero-unit" id="banner" ng-show="isLoggedIn()">
-	<div class="container">
-		<h1>Welcome to GIFchat</h1>
-		<div ng-hide="chosenPrivate">
-			<p class="lead" ng-hide="dateEntered">Enter the username of your friend below!</p>
-			<input type="text" ng-model="usernameFriend" class="form-control">
-			<button type="submit" ng-click="setFriendUsername(usernameFriend)" class="btn btn-default">Submit</button>
-		</div>
-		<div ng-show="chosenPrivate">
-			<p class="lead">Please enter your message below...always be polite!</p>
-			<input type="text" ng-model="userMessage" class="form-control">
-			<button type="submit" ng-click="addMessage(userMessage)" class="btn btn-default">Send Message</button>
-		</div>
+<div id="wrapper" ng-class="{'toggled': active == true}">
+
+        <!-- Sidebar -->
+	<div id="sidebar-wrapper" ng-show=isLoggedIn()>
+	    <ul class="sidebar-nav">
+	        <li class="sidebar-brand">
+	            <a href="#">
+	                Friends Conversations
+	            </a>
+	        </li>
+	        <li>
+	        	<h4><a ng-click="addFriend()">Add a Friend</a><h4>
+	        	<input ng-show="added" type="text" ng-model="newUser" class="form-control" placeholder="username...">
+				<button ng-show="added" type="submit" ng-click="setFriendUsername(newUser); addMessage('you are now connected!'); addFriend()" class="btn btn-xs" >Add Friend</button>
+	        </li>
+	        <li ng-repeat="user in messages">
+	            <a ng-click="setFriendUsername(user.$id)">{{user.$id}}</a>
+	        </li>
+	        <li>
+	        	<h3><a href="" ng-click="logout()">Logout</a><h3>
+	        </li>
+	    </ul>
 	</div>
-	<br>
-	<div>
-	  	<button type="button" class="btn btn-default btn-lg">
-  			<span class="glyphicon glyphicon-globe"></span> Global Message
-	  	</button>
-	  	<button type="button" class="btn btn-default btn-lg">
-	  		<a>
-  			<span class="glyphicon glyphicon-envelope"></span> Private Message
-	  	</button>
-	</div>
-</header>
-<header class="hero-unit" id="banner" ng-hide="isLoggedIn()">
-	<div class="container">
-		<h1>Welcome to GIFchat</h1>
-		<p class="lead" ng-hide="dateEntered">Please login or signup to have full access!</p>
-	</div>
-	<br>
-	<div>
-		<a href="/login">
-		  	<button type="button" class="btn btn-default btn-lg">
-	  			<span class="glyphicon glyphicon-globe"></span>Sign in!
-		  	</button>
-		</a>
-	  	<a href="/signup">
-	  		<button type="button" class="btn btn-default btn-lg" href="/signup">
-  				<span class="glyphicon glyphicon-envelope"></span>Sign up
-	  		</button>
-	  	</a>
-	</div>
-</header>
-<div class="container">
-	<div class="row">
-		<div class="col-md-12">
-			<div class="scroll-table">
-				<table class="table table-striped">
-				<thead>
-			        <tr>
-			            <th>Username</th>
-			            <th>Message</th>
-			        </tr>
-			    </thead>
-				    <tbody>
-				        <tr ng-repeat="user in messages">
-				            <td>{{user.$id}}</td>
-				            <td><p ng-repeat="texts in user">{{texts.username}} : {{texts.text}}</p></td>
-				            <!-- <img class="giffy" src="{{message.text}}"/> -->
-				        </tr>
-				    </tbody>
-				</table>
-			</div>
-		</div>
-	</div>
+        <!-- Page header -->
+        <!-- <div ng-include="'components/navbar/navbar.html'" class="span3"></div> -->
+        <!-- Page Content -->
+	<div id="page-content-wrapper">
+        <div class="container-fluid">
+            <div class="row">
+                <h1>Welcome back {{username}}, you are now chatting with {{friendsName}}</h1>
+		        <div class="commentArea yolo">
+		        	<div ng-repeat="texts in privateMessages" ng-class="texts.username == username ? 'bubbledRight' : 'bubbledLeft'">
+		            {{texts.text}}
+		        	</div>
+		        </div>
+            </div>
+            <footer>
+            	<input type="text" ng-model="userMessage" class="form-control">
+				<button type="submit" ng-click="addMessage(userMessage)" class="btn btn-default">Send Message</button>
+                <a class="btn btn-default" ng-click="activate()">Toggle Menu</a>
+            </footer>
+        </div>
+    </div>
 </div>
+
 
