--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -32,6 +32,11 @@
             </a>
           </div>
       </div>    
+
+
+      <!-- SIGNUP FORM -->
+
+
       <form class="form" name="form" ng-submit="register(form)" ng-show="activeSignup" novalidate>
 
         <div class="form-group" ng-class="{ 'has-success': form.name.$valid && submitted,
